--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -2,5 +2,9 @@
     display: flex;
     align-items: center;
     justify-content: center;
-    height: 90vh;
+    height: 80vh;
+}
+
+.title {
+    font-size: 42px;
 }
