--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -8,4 +8,6 @@
 .title {
     font-size: 42px;
     text-align: center;
+    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+    color: #20647c;
 }
